--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <div class="wrapper header-container">
             <div class="header-left">
                 <h1>Grow your skills to advance your career path</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat cupiditate ut aliquid delectus minima error corrupti quas dolore rem illo.</p>
-                <a href="#" class="btn btn-primary">Get Started</a> 
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat cupiditate ut aliquid delectus
+                    minima error corrupti quas dolore rem illo.</p>
+                <a href="#" class="btn btn-primary">Get Started</a>
             </div>
             <div class="header-right">
                 <div class="header-right-image">
@@ -47,6 +48,57 @@
         </div>
     </header>
     <!-- Header End -->
+
+    <!-- Categories Start -->
+    <section class="categories">
+        <div class="wrapper categories-container">
+            <div class="categories-left">
+                <h2>Categories</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum ducimus sunt debitis quibusdam suscipit beatae corporis magni fuga in veritatis aliquid consectetur, iste, similique aut qui ipsa ipsam a! Itaque?
+                </p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="categories-right">
+                <article class="category">
+                    <span class="category-icon"><i class="fa-solid fa-bitcoin-sign"></i></span>
+                    <h5>Blockchain</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, consequuntur?</p>
+                </article>
+
+                <article class="category">
+                    <span class="category-icon"><i class="fa-solid fa-paintbrush"></i></span>
+                    <h5>Graphic Design</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, consequuntur?</p>
+                </article>
+
+                <article class="category">
+                    <span class="category-icon"><i class="fa-solid fa-dollar-sign"></i></span>
+                    <h5>Finance</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, consequuntur?</p>
+                </article>
+
+                <article class="category">
+                    <span class="category-icon"><i class="fa-solid fa-bullhorn"></i></span>
+                    <h5>Marketing</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, consequuntur?</p>
+                </article>
+
+                <article class="category">
+                    <span class="category-icon"><i class="fa-solid fa-music"></i></span>
+                    <h5>Music</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, consequuntur?</p>
+                </article>
+
+                <article class="category">
+                    <span class="category-icon"><i class="fa-solid fa-briefcase"></i></span>
+                    <h5>Business</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, consequuntur?</p>
+                </article>
+
+            </div>
+        </div>
+    </section>
+    <!-- Categories End -->
 </body>
 
 </html>
