changed the directory structure of projects, separating css classes

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/components/nav-menu.css">
+    <link rel="stylesheet" href="./styles/components/hero.css">
+    <link rel="stylesheet" href="./styles/components/categories.css">
+    <link rel="stylesheet" href="./styles/utils.css">
 </head>
 
 <body>
     <!-- Nav Start -->
     <nav>
-        <div class="wrapper nav-container">
+        <div class="container nav-container">
             <a href="index.html">
                 <h4>Website</h4>
             </a>
@@ -31,30 +35,32 @@
     </nav>
     <!-- Nav End -->
 
-    <!-- Header Start -->
+    <!-- Hero Start -->
     <header>
-        <div class="wrapper header-container">
-            <div class="header-left">
+        <div class="container hero-container">
+            <div class="hero-left">
                 <h1>Grow your skills to advance your career path</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat cupiditate ut aliquid delectus
                     minima error corrupti quas dolore rem illo.</p>
                 <a href="#" class="btn btn-primary">Get Started</a>
             </div>
-            <div class="header-right">
-                <div class="header-right-image">
+            <div class="hero-right">
+                <div class="hero-right-image">
                     <img src="./images/header.svg" alt="">
                 </div>
             </div>
         </div>
     </header>
-    <!-- Header End -->
+    <!-- Hero End -->
 
     <!-- Categories Start -->
     <section class="categories">
-        <div class="wrapper categories-container">
+        <div class="container categories-container">
             <div class="categories-left">
                 <h2>Categories</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum ducimus sunt debitis quibusdam suscipit beatae corporis magni fuga in veritatis aliquid consectetur, iste, similique aut qui ipsa ipsam a! Itaque?
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum ducimus sunt debitis quibusdam
+                    suscipit beatae corporis magni fuga in veritatis aliquid consectetur, iste, similique aut qui ipsa
+                    ipsam a! Itaque?
                 </p>
                 <a href="#" class="btn">Learn More</a>
             </div>
@@ -99,6 +105,8 @@
         </div>
     </section>
     <!-- Categories End -->
+
+    <script src="app.js"></script>
 </body>
 
 </html>
