Added logic for webpage is scrolled when page refreshes, added testimonials section, added comments

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./styles/components/categories.css" />
     <link rel="stylesheet" href="./styles/components/courses.css" />
     <link rel="stylesheet" href="./styles/components/faqs.css" />
+    <link rel="stylesheet" href="./styles/components/testimonials.css" />
     <link rel="stylesheet" href="./styles/utils.css" />
   </head>
 
@@ -86,6 +87,7 @@
           <a href="#" class="btn">Learn More</a>
         </div>
         <div class="categories-right">
+          <!-- Category 1 -->
           <article class="category">
             <span class="category-icon">
               <svg
@@ -107,7 +109,7 @@
               consequuntur?
             </p>
           </article>
-
+          <!-- Category 2 -->
           <article class="category">
             <span class="category-icon">
               <svg
@@ -129,7 +131,7 @@
               consequuntur?
             </p>
           </article>
-
+          <!-- Category 3 -->
           <article class="category">
             <span class="category-icon">
               <svg
@@ -151,7 +153,7 @@
               consequuntur?
             </p>
           </article>
-
+          <!-- Category 4 -->
           <article class="category">
             <span class="category-icon">
               <svg
@@ -173,7 +175,7 @@
               consequuntur?
             </p>
           </article>
-
+          <!-- Category 5 -->
           <article class="category">
             <span class="category-icon">
               <svg
@@ -199,7 +201,7 @@
               consequuntur?
             </p>
           </article>
-
+          <!-- Category 6 -->
           <article class="category">
             <span class="category-icon">
               <svg
@@ -287,7 +289,7 @@
     <!-- ************************************************ -->
 
     <!-- ************************************************ -->
-    <!--                 FAQs Start                    -->
+    <!--                   FAQs Start                     -->
     <!-- ************************************************ -->
 
     <section class="faqs">
@@ -567,7 +569,111 @@
     </section>
 
     <!-- ************************************************ -->
-    <!--                 FAQs End                      -->
+    <!--                   FAQs End                       -->
+    <!-- ************************************************ -->
+
+    <!-- ************************************************ -->
+    <!--               Testimonials Start                 -->
+    <!-- ************************************************ -->
+
+    <section class="container testimonials-container">
+      <h3>Students' Testimonials</h3>
+      <div>
+        <!-- Testimonial 1 -->
+        <article class="testimonial">
+          <article>
+            <div class="avatar">
+              <img src="./images/avatar1.jpg" alt="" srcset="" />
+            </div>
+            <div class="testimonial-profile">
+              <h6>Jane Doe</h6>
+              <small>Student</small>
+            </div>
+            <div class="testimonial-body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
+                vel quis corrupti maiores quo perferendis?
+              </p>
+            </div>
+          </article>
+        </article>
+        <!-- Testimonial 2 -->
+        <article class="testimonial">
+          <article>
+            <div class="avatar">
+              <img src="./images/avatar2.jpg" alt="" srcset="" />
+            </div>
+            <div class="testimonial-profile">
+              <h6>John Doe</h6>
+              <small>Web Developer</small>
+            </div>
+            <div class="testimonial-body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
+                vel quis corrupti maiores quo perferendis?
+              </p>
+            </div>
+          </article>
+        </article>
+        <!-- Testimonial 3 -->
+        <article class="testimonial">
+          <article>
+            <div class="avatar">
+              <img src="./images/avatar3.jpg" alt="" srcset="" />
+            </div>
+            <div class="testimonial-profile">
+              <h6>John Smith</h6>
+              <small>Student</small>
+            </div>
+            <div class="testimonial-body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
+                vel quis corrupti maiores quo perferendis?
+              </p>
+            </div>
+          </article>
+        </article>
+        <!-- Testimonial 4 -->
+        <article class="testimonial">
+          <article>
+            <div class="avatar">
+              <img src="./images/avatar4.jpg" alt="" srcset="" />
+            </div>
+            <div class="testimonial-profile">
+              <h6>Jane Smith</h6>
+              <small>Student</small>
+            </div>
+            <div class="testimonial-body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
+                vel quis corrupti maiores quo perferendis?
+              </p>
+            </div>
+          </article>
+        </article>
+        <!-- Testimonial 5 -->
+        <article class="testimonial">
+          <article>
+            <div class="avatar">
+              <img src="./images/avatar5.jpg" alt="" srcset="" />
+            </div>
+            <div class="testimonial-profile">
+              <h6>Janie Doe</h6>
+              <small>Student</small>
+            </div>
+            <div class="testimonial-body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
+                vel quis corrupti maiores quo perferendis?
+              </p>
+            </div>
+          </article>
+        </article>
+      </div>
+    </section>
+
+    <!-- ************************************************ -->
+    <!--               Testimonials End                   -->
     <!-- ************************************************ -->
 
     <script type="module" src="src/app.js"></script>
