--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- ************************************************ -->
     <!--                     Nav Start                    -->
     <!-- ************************************************ -->
-    <nav>
+    <nav class="scroll-transition">
       <div class="container nav-container">
         <a href="index.html">
           <h5>Courses EDU</h5>
@@ -296,8 +296,8 @@
       <h3>Frequently Asked Questions</h3>
       <div class="container faqs-container">
         <!-- FAQ 1 -->
-        <article class="faq">
-          <div class="faq-icon">
+        <article class="faq accordion">
+          <div class="faq-icon accordion-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
@@ -313,18 +313,18 @@
             </svg>
           </div>
           <div class="faq-q_a">
-            <h5 class="faq-question">
+            <h5 class="faq-question accordion-trigger">
               How do I know the right courses for me?
             </h5>
-            <p class="faq-answer">
+            <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
           </div>
         </article>
         <!-- FAQ 2 -->
-        <article class="faq">
-          <div class="faq-icon">
+        <article class="faq accordion">
+          <div class="faq-icon accordion-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
@@ -340,18 +340,18 @@
             </svg>
           </div>
           <div class="faq-q_a">
-            <h5 class="faq-question">
+            <h5 class="faq-question accordion-trigger">
               How do I know the right courses for me?
             </h5>
-            <p class="faq-answer">
+            <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
           </div>
         </article>
         <!-- FAQ 3 -->
-        <article class="faq">
-          <div class="faq-icon">
+        <article class="faq accordion">
+          <div class="faq-icon accordion-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
@@ -367,18 +367,18 @@
             </svg>
           </div>
           <div class="faq-q_a">
-            <h5 class="faq-question">
+            <h5 class="faq-question accordion-trigger">
               How do I know the right courses for me?
             </h5>
-            <p class="faq-answer">
+            <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
           </div>
         </article>
         <!-- FAQ 4 -->
-        <article class="faq">
-          <div class="faq-icon">
+        <article class="faq accordion">
+          <div class="faq-icon accordion-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
@@ -394,18 +394,18 @@
             </svg>
           </div>
           <div class="faq-q_a">
-            <h5 class="faq-question">
+            <h5 class="faq-question accordion-trigger">
               How do I know the right courses for me?
             </h5>
-            <p class="faq-answer">
+            <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
           </div>
         </article>
         <!-- FAQ 5 -->
-        <article class="faq">
-          <div class="faq-icon">
+        <article class="faq accordion">
+          <div class="faq-icon accordion-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
@@ -421,18 +421,18 @@
             </svg>
           </div>
           <div class="faq-q_a">
-            <h5 class="faq-question">
+            <h5 class="faq-question accordion-trigger">
               How do I know the right courses for me?
             </h5>
-            <p class="faq-answer">
+            <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
           </div>
         </article>
         <!-- FAQ 6 -->
-        <article class="faq">
-          <div class="faq-icon">
+        <article class="faq accordion">
+          <div class="faq-icon accordion-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
@@ -448,18 +448,18 @@
             </svg>
           </div>
           <div class="faq-q_a">
-            <h5 class="faq-question">
+            <h5 class="faq-question accordion-trigger">
               How do I know the right courses for me?
             </h5>
-            <p class="faq-answer">
+            <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
           </div>
         </article>
         <!-- FAQ 7 -->
-        <article class="faq">
-          <div class="faq-icon">
+        <article class="faq accordion">
+          <div class="faq-icon accordion-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
@@ -475,18 +475,18 @@
             </svg>
           </div>
           <div class="faq-q_a">
-            <h5 class="faq-question">
+            <h5 class="faq-question accordion-trigger">
               How do I know the right courses for me?
             </h5>
-            <p class="faq-answer">
+            <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
           </div>
         </article>
         <!-- FAQ 8 -->
-        <article class="faq">
-          <div class="faq-icon">
+        <article class="faq accordion">
+          <div class="faq-icon accordion-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
@@ -502,18 +502,18 @@
             </svg>
           </div>
           <div class="faq-q_a">
-            <h5 class="faq-question">
+            <h5 class="faq-question accordion-trigger">
               How do I know the right courses for me?
             </h5>
-            <p class="faq-answer">
+            <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
           </div>
         </article>
         <!-- FAQ 9 -->
-        <article class="faq">
-          <div class="faq-icon">
+        <article class="faq accordion">
+          <div class="faq-icon accordion-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
@@ -529,18 +529,18 @@
             </svg>
           </div>
           <div class="faq-q_a">
-            <h5 class="faq-question">
+            <h5 class="faq-question accordion-trigger">
               How do I know the right courses for me?
             </h5>
-            <p class="faq-answer">
+            <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
           </div>
         </article>
         <!-- FAQ 10 -->
-        <article class="faq">
-          <div class="faq-icon">
+        <article class="faq accordion">
+          <div class="faq-icon accordion-icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               x="0px"
@@ -556,10 +556,10 @@
             </svg>
           </div>
           <div class="faq-q_a">
-            <h5 class="faq-question">
+            <h5 class="faq-question accordion-trigger">
               How do I know the right courses for me?
             </h5>
-            <p class="faq-answer">
+            <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
