changed icon svgs for css span, changed container structure for faq triggers

--- a/index.html
+++ b/index.html
@@ -295,276 +295,178 @@
     <section class="faqs">
       <h3>Frequently Asked Questions</h3>
       <div class="container faqs-container">
-        <!-- FAQ 1 -->
-        <article class="faq accordion">
-          <div class="faq-icon accordion-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              x="0px"
-              y="0px"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="faq-q_a">
-            <h5 class="faq-question accordion-trigger">
-              How do I know the right courses for me?
-            </h5>
+        <div class="faqs-left">
+          <!-- FAQ 1 -->
+          <article class="faq accordion">
+            <div class="accordion-trigger faqs-trigger">
+              <div class="faq-icon accordion-icon">
+                <span></span>
+              </div>
+              <h5 class="faq-question">
+                How do I know the right courses for me?
+              </h5>
+            </div>
             <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
-          </div>
-        </article>
-        <!-- FAQ 2 -->
-        <article class="faq accordion">
-          <div class="faq-icon accordion-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              x="0px"
-              y="0px"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="faq-q_a">
-            <h5 class="faq-question accordion-trigger">
-              How do I know the right courses for me?
-            </h5>
+          </article>
+          <!-- FAQ 2 -->
+          <article class="faq accordion">
+            <div class="accordion-trigger faqs-trigger">
+              <div class="faq-icon accordion-icon">
+                <span></span>
+                </svg>
+              </div>
+
+              <h5 class="faq-question">
+                How do I know the right courses for me?
+              </h5>
+            </div>
             <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
-          </div>
-        </article>
-        <!-- FAQ 3 -->
-        <article class="faq accordion">
-          <div class="faq-icon accordion-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              x="0px"
-              y="0px"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="faq-q_a">
-            <h5 class="faq-question accordion-trigger">
-              How do I know the right courses for me?
-            </h5>
+          </article>
+          <!-- FAQ 3 -->
+          <article class="faq accordion">
+            <div class="accordion-trigger faqs-trigger">
+              <div class="faq-icon accordion-icon">
+                <span></span>
+                </svg>
+              </div>
+
+              <h5 class="faq-question">
+                How do I know the right courses for me?
+              </h5>
+            </div>
             <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
-          </div>
-        </article>
-        <!-- FAQ 4 -->
-        <article class="faq accordion">
-          <div class="faq-icon accordion-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              x="0px"
-              y="0px"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="faq-q_a">
-            <h5 class="faq-question accordion-trigger">
-              How do I know the right courses for me?
-            </h5>
+          </article>
+          <!-- FAQ 4 -->
+          <article class="faq accordion">
+            <div class="accordion-trigger faqs-trigger">
+              <div class="faq-icon accordion-icon">
+                <span></span>
+                </svg>
+              </div>
+
+              <h5 class="faq-question">
+                How do I know the right courses for me?
+              </h5>
+            </div>
             <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
-          </div>
-        </article>
-        <!-- FAQ 5 -->
-        <article class="faq accordion">
-          <div class="faq-icon accordion-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              x="0px"
-              y="0px"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="faq-q_a">
-            <h5 class="faq-question accordion-trigger">
-              How do I know the right courses for me?
-            </h5>
+          </article>
+          <!-- FAQ 5 -->
+          <article class="faq accordion">
+            <div class="accordion-trigger faqs-trigger">
+              <div class="faq-icon accordion-icon">
+                <span></span>
+                </svg>
+              </div>
+
+              <h5 class="faq-question">
+                How do I know the right courses for me?
+              </h5>
+            </div>
             <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
-          </div>
-        </article>
-        <!-- FAQ 6 -->
-        <article class="faq accordion">
-          <div class="faq-icon accordion-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              x="0px"
-              y="0px"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="faq-q_a">
-            <h5 class="faq-question accordion-trigger">
-              How do I know the right courses for me?
-            </h5>
+          </article>
+        </div>
+        <div class="faqs-right">
+          <!-- FAQ 6 -->
+          <article class="faq accordion">
+            <div class="accordion-trigger faqs-trigger">
+              <div class="faq-icon accordion-icon">
+                <span></span>
+                </svg>
+              </div>
+
+              <h5 class="faq-question">
+                How do I know the right courses for me?
+              </h5>
+            </div>
             <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
-          </div>
-        </article>
-        <!-- FAQ 7 -->
-        <article class="faq accordion">
-          <div class="faq-icon accordion-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              x="0px"
-              y="0px"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="faq-q_a">
-            <h5 class="faq-question accordion-trigger">
-              How do I know the right courses for me?
-            </h5>
+          </article>
+          <!-- FAQ 7 -->
+          <article class="faq accordion">
+            <div class="accordion-trigger faqs-trigger">
+              <div class="faq-icon accordion-icon">
+                <span></span>
+                </svg>
+              </div>
+
+              <h5 class="faq-question">
+                How do I know the right courses for me?
+              </h5>
+            </div>
             <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
-          </div>
-        </article>
-        <!-- FAQ 8 -->
-        <article class="faq accordion">
-          <div class="faq-icon accordion-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              x="0px"
-              y="0px"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="faq-q_a">
-            <h5 class="faq-question accordion-trigger">
-              How do I know the right courses for me?
-            </h5>
+          </article>
+          <!-- FAQ 8 -->
+          <article class="faq accordion">
+            <div class="accordion-trigger faqs-trigger">
+              <div class="faq-icon accordion-icon">
+                <span></span>
+                </svg>
+              </div>
+
+              <h5 class="faq-question">
+                How do I know the right courses for me?
+              </h5>
+            </div>
             <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
-          </div>
-        </article>
-        <!-- FAQ 9 -->
-        <article class="faq accordion">
-          <div class="faq-icon accordion-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              x="0px"
-              y="0px"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="faq-q_a">
-            <h5 class="faq-question accordion-trigger">
-              How do I know the right courses for me?
-            </h5>
+          </article>
+          <!-- FAQ 9 -->
+          <article class="faq accordion">
+            <div class="accordion-trigger faqs-trigger">
+              <div class="faq-icon accordion-icon">
+                <span></span>
+                </svg>
+              </div>
+
+              <h5 class="faq-question">
+                How do I know the right courses for me?
+              </h5>
+            </div>
             <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
-          </div>
-        </article>
-        <!-- FAQ 10 -->
-        <article class="faq accordion">
-          <div class="faq-icon accordion-icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              x="0px"
-              y="0px"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="faq-q_a">
-            <h5 class="faq-question accordion-trigger">
-              How do I know the right courses for me?
-            </h5>
+          </article>
+          <!-- FAQ 10 -->
+          <article class="faq accordion">
+            <div class="accordion-trigger faqs-trigger">
+              <div class="faq-icon accordion-icon">
+                <span></span>
+                </svg>
+              </div>
+
+              <h5 class="faq-question">
+                How do I know the right courses for me?
+              </h5>
+            </div>
             <p class="faq-answer accordion-panel">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptate, suscipit!
             </p>
-          </div>
-        </article>
+          </article>
+        </div>
       </div>
     </section>
 
