added media layouts

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           <li><a href="#">Courses</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
-        <button id="open-menu-btn"><i class="fa-solid fa-x"></i></button>
+        <button id="open-menu-btn"><i class="fa-solid fa-bars">OPEN</i></button>
+        <button id="close-menu-btn"><i class="fa-solid fa-x">CLOSE</i></button>
       </div>
     </nav>
     <!-- ************************************************ -->
@@ -254,7 +254,7 @@
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero ex
               quia ut perspiciatis distinctio assumenda omnis?
             </p>
-            <a href="course.html" class="btn btn-primary">Learn More</a>
+            <a href="#" class="btn btn-primary">Learn More</a>
           </div>
         </article>
         <!-- Course 2 -->
@@ -268,7 +268,7 @@
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero ex
               quia ut perspiciatis distinctio assumenda omnis?
             </p>
-            <a href="course.html" class="btn btn-primary">Learn More</a>
+            <a href="#" class="btn btn-primary">Learn More</a>
           </div>
         </article>
         <!-- Course 3 -->
@@ -282,7 +282,7 @@
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero ex
               quia ut perspiciatis distinctio assumenda omnis?
             </p>
-            <a href="course.html" class="btn btn-primary">Learn More</a>
+            <a href="#" class="btn btn-primary">Learn More</a>
           </div>
         </article>
       </div>
@@ -592,9 +592,9 @@
           <h5>Permalinks</h5>
           <ul class="permalinks">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Courses</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
         <!-- Footer Section 3 -->
